tests/fixtures/valid/source_relative_paths/train.etcm
spec TrainRun:
  data: DataConfig

impl default:
  $data: nested/model.etcm
