tests/fixtures/invalid/path_selector_ambiguity.etcm
spec RefConfig:
  model: ModelConfig

impl broken:
  $model: models/lm.etcm#
